--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "chai": "^4.1.2",
     "element-ui": "^2.3.4",
     "karma": "^1.3.0",
     "karma-coverage": "^1.1.1",
