--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "karma-sourcemap-loader": "^0.3.7",
     "karma-spec-reporter": "0.0.26",
     "karma-webpack": "^1.7.0",
+    "sinon": "^1.17.3",
+    "sinon-chai": "^2.8.0",
     "vue": "^2.5.2"
   },
   "devDependencies": {
