--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
     "lint": "eslint --ext .js,.vue src",
-    "build": "node build/build.js"
+    "build": "node build/build.js",
+    "unit": "NODE_ENV=testing karma start test/unit/karma.conf.js --single-run"
   },
   "dependencies": {
     "chai": "^4.1.2",
