--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "test": "NODE_ENV=testing npm run unit"
   },
   "dependencies": {
+    "awesome-mask": "^0.3.3",
     "chai": "^4.1.2",
     "element-ui": "^2.3.4",
     "karma": "^1.3.0",
